kubernetes/istio/namespace.yaml
# Copyright (c) 2024 Bima Kharisma Wicaksana
# Istio System Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    app.kubernetes.io/name: istio
    app.kubernetes.io/component: service-mesh
