kubernetes/istio/kiali.yaml
# Copyright (c) 2024 Bima Kharisma Wicaksana
# Kiali - Service Mesh Observability Dashboard
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-operator
---
# VirtualService for Kiali access
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - "kiali.example.com"
  gateways:
    - main-gateway
  http:
    - route:
        - destination:
            host: kiali
            port:
              number: 20001
